horizontal scrolling fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,8 +36,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
+
 
 @font-face {
   font-family: 'Lulo';
